# AeroRAG

./: .env.example  .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements.txt
docs/daily_logs/: TEMPLATE.md
scripts/: daily.sh  generate_roadmap_pdf.py
src/aerorag/: __init__.py  config.py  pipeline.py
tests/: test_smoke.py
